affichage dans la console des objets et créeation de l'exemple pour afficher en html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 Boutique Licorne 🦄
             </a></h1>
             <div class="col-md-4 col-sm-12 d-flex justify-content-end align-items-center">
-                <a href="#panier"><button type="button" class="btn btn-warning">🛒 Panier</button></a>
+                <a href="#panier"><button type="button" class="btn btn-warning" id="btn">🛒 Panier</button></a>
             </div>
         </div>
     </nav>
