affichage dans des cartes les objets

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             </div>
         </div>
     </nav>
-    <main class="container" id="main"></main>
+    <div class="container">
+        <main class="row justify-content-around" id="main"></main>
+    </div>
     <footer >
         <p>Copyright ©nanaplouf - cours JavaScript/JSON pour le PoleS 2025  </p>
     </footer>
