création de la fonction card et changement dans le foreach

--- a/index.html
+++ b/index.html
@@ -16,19 +16,22 @@
         <div class="container-fluid">
             <h1 class="col-md-8 col-sm-12 fs-5"><a class="navbar-brand" href="#">
                 <img src="/assets/img/logonana.png" alt="Logo" width="70" class="d-inline-block align-text-top">
-                Boutique Licorne 🦄
+                <span class="myh1">Boutique Licorne 🦄</span> 
             </a></h1>
             <div class="col-md-4 col-sm-12 d-flex justify-content-end align-items-center">
-                <a href="#panier"><button type="button" class="btn btn-warning" id="btn">🛒 Panier</button></a>
+                <a href="#panier"><button type="button" class="myBtnColor" id="btn">🛒 Panier</button></a>
             </div>
         </div>
     </nav>
+
     <div class="container">
         <main class="row justify-content-around" id="main"></main>
     </div>
+
     <footer >
         <p>Copyright ©nanaplouf - cours JavaScript/JSON pour le PoleS 2025  </p>
     </footer>
+
     <script src="/assets/js/script.js"></script>
 </body>
 </html>
