creation du panier en HTML et CSS modification de la font

--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
         <main class="row justify-content-around" id="main"></main>
     </div>
 
+    <div class="myCart">
+        <h3 class="mb-5" id="h2Cart">Panier</h3>
+        <div id="panier"></div>
+        <p class="d-flex justify-content-end fs-5" id="priceTotal">Prix Total €</p>
+    </div>
+
     <footer >
-        <p>Copyright ©nanaplouf - cours JavaScript/JSON pour le PoleS 2025  </p>
+        <p>Copyright ©nanaplouf - cours JavaScript/JSON pour le PoleS 2025</p>
     </footer>
 
     <script src="/assets/js/script.js"></script>
