création de la fonction pour voir le local storage et pour ajouter un objet à mon local storage

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar bg-body-tertiary mb-5">
         <div class="container-fluid">
-            <h1 class="col-md-8 col-sm-12 fs-5"><a class="navbar-brand" href="#">
+            <h1 class="col-md-8 col-sm-12 fs-5"><a class="navbar-brand d-flex align-items-center" href="#">
                 <img src="/assets/img/logonana.png" alt="Logo" width="70" class="d-inline-block align-text-top">
                 <span class="myh1">Boutique Licorne 🦄</span> 
             </a></h1>
@@ -29,7 +29,7 @@
     </div>
 
     <div class="myCart">
-        <h3 class="mb-5" id="h2Cart">Panier</h3>
+        <h3 class="mb-5" id="h2Cart"></h3>
         <div id="panier"></div>
         <p class="d-flex justify-content-end fs-5" id="priceTotal">Prix Total €</p>
     </div>
