création de la fonction affichage

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="myCart">
-        <h3 class="mb-5" id="h2Cart"></h3>
+        <h3 class="mb-5" id="titleCart"></h3>
         <div id="panier"></div>
         <p class="d-flex justify-content-end fs-5" id="priceTotal">Prix Total €</p>
     </div>
