correction affichage panier et total

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="myCart">
         <h3 class="mb-5" id="titleCart"></h3>
         <div id="panier"></div>
-        <p class="d-flex justify-content-end fs-5" id="priceTotal">Prix Total €</p>
+        <p class="d-flex justify-content-end fs-5" id="priceTotal"></p>
     </div>
 
     <footer >
